--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ header {
 .recommendations h2 {
     margin: 20px;
     font-size: 20px;
+    text-align: center;
     font-weight: bold;
 }
 
@@ -70,6 +71,7 @@ header {
 
 .card {
     width: 150px;
+    weight: 75px;
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
